--- a/docs/colab/quickstart.ipynb
+++ b/docs/colab/quickstart.ipynb
@@ -33,7 +33,7 @@
     "import h5rdmtoolbox as h5tbx\n",
     "\n",
     "# Assume we published a convention here: https://zenodo.org/record/8281285\n",
-    "cv = h5tbx.conventions.from_zenodo(doi='10156750')"
+    "cv = h5tbx.convention.from_zenodo(doi='10156750')"
    ]
   },
   {
