--- a/docs/conventions/examples/EngMeta.ipynb
+++ b/docs/conventions/examples/EngMeta.ipynb
@@ -71,7 +71,7 @@
    ],
    "source": [
     "import h5rdmtoolbox as h5tbx\n",
-    "cv = h5tbx.conventions.from_yaml('EngMeta.yaml')\n",
+    "cv = h5tbx.convention.from_yaml('EngMeta.yaml')\n",
     "cv"
    ]
   },
