--- a/docs/conventions/examples/Provenance.ipynb
+++ b/docs/conventions/examples/Provenance.ipynb
@@ -64,7 +64,7 @@
     }
    ],
    "source": [
-    "cv = h5tbx.conventions.from_zenodo('https://zenodo.org/records/10156750')\n",
+    "cv = h5tbx.convention.from_zenodo('https://zenodo.org/records/10156750')\n",
     "\n",
     "h5tbx.use(cv)"
    ]
@@ -115,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from h5rdmtoolbox.conventions.standard_names import accessor"
+    "from h5rdmtoolbox.convention.standard_names import accessor"
    ]
   },
   {
