--- a/docs/conventions/examples/standard_name_convention.ipynb
+++ b/docs/conventions/examples/standard_name_convention.ipynb
@@ -43,7 +43,7 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "from h5rdmtoolbox.conventions.standard_names.table import StandardNameTable"
+    "from h5rdmtoolbox.convention.standard_names.table import StandardNameTable"
    ]
   },
   {
@@ -606,7 +606,7 @@
        "\u001b[1mConvention(\"standard name convention\")\u001b[0m\n",
        "contact: https://orcid.org/0000-0001-8729-0482\n",
        "  File.__init__():\n",
-       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.conventions.consts.DefaultValue object at 0x000001CBD2CD2100>):\n",
+       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.convention.consts.DefaultValue object at 0x000001CBD2CD2100>):\n",
        "\t\tThe standard name table of the convention.\n",
        "  Group.create_dataset():\n",
        "    * \u001b[3mscale\u001b[0m (default=None):\n",
@@ -628,7 +628,7 @@
     }
    ],
    "source": [
-    "zenodo_cv = h5tbx.conventions.from_zenodo('https://zenodo.org/record/8357399')\n",
+    "zenodo_cv = h5tbx.convention.from_zenodo('https://zenodo.org/record/8357399')\n",
     "sn_cv = zenodo_cv.pop('contact', 'comment', 'references', 'data_type')\n",
     "sn_cv.name = 'standard name convention'\n",
     "sn_cv.register()\n",
