--- a/docs/conventions/examples/standard_name_interface.ipynb
+++ b/docs/conventions/examples/standard_name_interface.ipynb
@@ -43,11 +43,11 @@
    "source": [
     "import h5rdmtoolbox as h5tbx\n",
     "\n",
-    "from h5rdmtoolbox.conventions.standard_names import HDF5StandardNameInterface\n",
+    "from h5rdmtoolbox.convention.standard_names import HDF5StandardNameInterface\n",
     "\n",
     "import numpy as np\n",
     "\n",
-    "cv = h5tbx.conventions.from_zenodo('https://zenodo.org/record/8357399')\n",
+    "cv = h5tbx.convention.from_zenodo('https://zenodo.org/record/8357399')\n",
     "cv.properties[h5tbx.File]['data_type'].make_optional()\n",
     "cv.properties[h5tbx.File]['contact'].make_optional()\n",
     "h5tbx.use(cv)"
