--- a/docs/conventions/ontologies.ipynb
+++ b/docs/conventions/ontologies.ipynb
@@ -256,17 +256,17 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--79771024876400\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--79771024876400\">\n",
+       "                        <input id=\"group-ds--5031410400\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5031410400\">\n",
        "                        /<span>(1)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.13.0</li><li style=\"list-style-type: none; font-style: italic\">contact_person<a href=\"http://w3id.org/nfdi4ing/metadata4ing#ContactPerson\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a> : <a href=\"https://orcid.org/0000-0001-8729-0482\"><img alt=\"ORCID logo\" src=\"https://info.orcid.org/wp-content/uploads/2019/11/orcid_16x16.png\" width=\"16\" height=\"16\" />https://orcid.org/0000-0001-8729-0482</a></li><li style=\"list-style-type: none; font-style: italic\">title : test file</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 1.0.0</li><li style=\"list-style-type: none; font-style: italic\">contact_person<a href=\"http://w3id.org/nfdi4ing/metadata4ing#ContactPerson\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a> : <a href=\"https://orcid.org/0000-0001-8729-0482\"><img alt=\"ORCID logo\" src=\"https://info.orcid.org/wp-content/uploads/2019/11/orcid_16x16.png\" width=\"16\" height=\"16\" />https://orcid.org/0000-0001-8729-0482</a></li><li style=\"list-style-type: none; font-style: italic\">title : test file</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/vel-79771029154000\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/vel-79771029158700\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/vel-79771029158700\">vel</label>\n",
+       "                <ul id=\"ds-1-/vel-5035097400\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/vel-5035104700\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/vel-5035104700\">vel</label>\n",
        "                    <span class=\"h5tb-dims\">(3) [int32]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">creator<a href=\"http://w3id.org/nfdi4ing/metadata4ing#DataCollector\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a> : <a href=\"https://orcid.org/0000-0001-8729-0482\"><img alt=\"ORCID logo\" src=\"https://info.orcid.org/wp-content/uploads/2019/11/orcid_16x16.png\" width=\"16\" height=\"16\" />https://orcid.org/0000-0001-8729-0482</a><a href=\"http://w3id.org/nfdi4ing/metadata4ing#orcidId\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a></li><li style=\"list-style-type: none; font-style: italic\">long_name : my velocity dataset</li><li style=\"list-style-type: none; font-style: italic\">random_attr : 1</li><li style=\"list-style-type: none; font-style: italic\">units<a href=\"https://qudt.org/schema/qudt/Unit\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a> : m/s</li>\n",
        "                </ul>\n",
@@ -492,17 +492,17 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--79771044823500\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--79771044823500\">\n",
+       "                        <input id=\"group-ds--5066023500\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5066023500\">\n",
        "                        /<span>(1)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.13.0</li><li style=\"list-style-type: none; font-style: italic\">contact_person<a href=\"http://w3id.org/nfdi4ing/metadata4ing#ContactPerson\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a> : <a href=\"https://orcid.org/0000-0001-8729-0482\"><img alt=\"ORCID logo\" src=\"https://info.orcid.org/wp-content/uploads/2019/11/orcid_16x16.png\" width=\"16\" height=\"16\" />https://orcid.org/0000-0001-8729-0482</a></li><li style=\"list-style-type: none; font-style: italic\">title : test file</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 1.0.0</li><li style=\"list-style-type: none; font-style: italic\">contact_person<a href=\"http://w3id.org/nfdi4ing/metadata4ing#ContactPerson\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a> : <a href=\"https://orcid.org/0000-0001-8729-0482\"><img alt=\"ORCID logo\" src=\"https://info.orcid.org/wp-content/uploads/2019/11/orcid_16x16.png\" width=\"16\" height=\"16\" />https://orcid.org/0000-0001-8729-0482</a></li><li style=\"list-style-type: none; font-style: italic\">title : test file</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/vel-79771045570500\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/vel-79771045573800\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/vel-79771045573800\">vel</label>\n",
+       "                <ul id=\"ds-1-/vel-5067374400\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/vel-5067380400\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/vel-5067380400\">vel</label>\n",
        "                    <span class=\"h5tb-dims\">(3) [int32]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : my velocity dataset</li><li style=\"list-style-type: none; font-style: italic\">random_attr : 1</li><li style=\"list-style-type: none; font-style: italic\">units<a href=\"https://qudt.org/schema/qudt/Unit\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a> : m/s<a href=\"https://qudt.org/schema/qudt/Unit\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a></li>\n",
        "                </ul>\n",
