--- a/docs/conventions/standard_attributes_and_conventions.ipynb
+++ b/docs/conventions/standard_attributes_and_conventions.ipynb
@@ -95,7 +95,7 @@
     }
    ],
    "source": [
-    "cv = h5tbx.conventions.from_yaml('units-convention.yaml')\n",
+    "cv = h5tbx.convention.from_yaml('units-convention.yaml')\n",
     "h5tbx.use(cv)  # or if we know the name: h5tbx.use(\"tutorial-units-convention\")"
    ]
   },
@@ -177,7 +177,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\da4323\\Documents\\programming\\GitHub\\h5RDMtoolbox\\h5rdmtoolbox\\conventions\\standard_attributes.py:332: StandardAttributeValidationWarning: The attribute \"units\" could not be validated by the convention \"tutorial-units-convention\".\n",
+      "C:\\Users\\da4323\\Documents\\programming\\GitHub\\h5RDMtoolbox\\h5rdmtoolbox\\convention\\standard_attributes.py:334: StandardAttributeValidationWarning: The attribute \"units\" could not be validated by the convention \"tutorial-units-convention\".\n",
       "Pydantic error: \n",
       "1 validation error for units\n",
       "value\n",
@@ -404,7 +404,7 @@
     }
    ],
    "source": [
-    "h5tbx.conventions.utils.yaml2json('example_convention.yaml')"
+    "h5tbx.convention.utils.yaml2json('example_convention.yaml')"
    ]
   },
   {
@@ -439,7 +439,7 @@
     }
    ],
    "source": [
-    "cv = h5tbx.conventions.from_yaml('example_convention.yaml')\n",
+    "cv = h5tbx.convention.from_yaml('example_convention.yaml')\n",
     "# you may also use .from_json('example_convention.json')\n",
     "cv"
    ]
@@ -742,12 +742,12 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--6295364900\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--6295364900\">\n",
+       "                        <input id=\"group-ds--4907104500\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--4907104500\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.13.0</li><li style=\"list-style-type: none; font-style: italic\">contact_id : id1722</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 1.0.0</li><li style=\"list-style-type: none; font-style: italic\">contact_id : id1722</li>\n",
        "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
@@ -826,46 +826,19 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\u001b[1mConvention(\"h5rdmtoolbox-tutorial-convention\")\u001b[0m\n",
-       "contact: https://orcid.org/0000-0001-8729-0482\n",
-       "  File.__init__():\n",
-       "    * \u001b[1mdata_type\u001b[0m:\n",
-       "\t\tType of data in file. Can be numerical, analytical or experimental.\n",
-       "    * \u001b[1mcontact\u001b[0m:\n",
-       "\t\tContact or responsible person for the full file. Contact is represented by an ORCID.\n",
-       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.conventions.consts.DefaultValue object at 0x000001DE045BA7C0>):\n",
-       "\t\tThe standard name table of the convention.\n",
-       "    * \u001b[3mcomment\u001b[0m (default=None):\n",
-       "\t\tComment describes the file content in more detail.\n",
-       "    * \u001b[3mreferences\u001b[0m (default=None):\n",
-       "\t\tWeb resources serving as references for the full file.\n",
-       "  Group.create_dataset():\n",
-       "    * \u001b[3munits\u001b[0m (default=None):\n",
-       "\t\tThe physical unit of the dataset. If dimensionless, the unit is ''.\n",
-       "    * \u001b[3mstandard_name\u001b[0m (default=None):\n",
-       "\t\tStandard name of the dataset. If not set, the long_name attribute must be given.\n",
-       "    * \u001b[3mlong_name\u001b[0m (default=None):\n",
-       "\t\tAn comprehensive description of the dataset. If not set, the standard_name attribute must be given.\n",
-       "    * \u001b[3mcomment\u001b[0m (default=None):\n",
-       "\t\tComment describes the dataset in more detail.\n",
-       "    * \u001b[3mreferences\u001b[0m (default=None):\n",
-       "\t\tWeb resources serving as references for the dataset.\n",
-       "  Group.create_group():\n",
-       "    * \u001b[3mcomment\u001b[0m (default=None):\n",
-       "\t\tComment describes the group content in more detail.\n",
-       "    * \u001b[3mreferences\u001b[0m (default=None):\n",
-       "\t\tWeb resources serving as references for the group."
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "from_zenodo() got an unexpected keyword argument 'doi'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m cv \u001b[38;5;241m=\u001b[39m \u001b[43mh5tbx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconvention\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_zenodo\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdoi\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mhttps://zenodo.org/records/10156750\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m cv\n",
+      "\u001b[1;31mTypeError\u001b[0m: from_zenodo() got an unexpected keyword argument 'doi'"
+     ]
     }
    ],
    "source": [
-    "cv = h5tbx.conventions.from_zenodo(doi='https://zenodo.org/records/10156750')\n",
+    "cv = h5tbx.convention.from_zenodo(doi='https://zenodo.org/records/10156750')\n",
     "cv"
    ]
   },
@@ -881,61 +854,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "bff929ab-d133-48bd-8c16-b7bd3080a426",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<StandardAttribute [keyword](\"standard_name\"): default_value=\"None\" | \"Standard name of the dataset. If not set, the long_name attribute must be given.\">"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cv.properties[h5tbx.Dataset]['standard_name']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "7f2295ae-7b1f-431f-8168-cf340b80adc2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "no convention: \n",
-      "\n",
-      "Parameters for \"__init__\":\n",
-      "  - name\n",
-      "  - mode\n",
-      "  - layout\n",
-      "  - attrs\n",
-      "  - kwargs\n",
-      "\n",
-      "------------\n",
-      "with convention h5rdmtoolbox-tutorial-convention: (standard attributes are made bold)\n",
-      "\n",
-      "Parameters for \"__init__\":\n",
-      "  - name\n",
-      "  - mode\n",
-      "  - layout\n",
-      "  - attrs\n",
-      "  - \u001b[1mdata_type\u001b[0m\n",
-      "  - \u001b[1mstandard_name_table\u001b[0m\n",
-      "  - \u001b[1mcomment\u001b[0m\n",
-      "  - \u001b[1mcontact\u001b[0m\n",
-      "  - \u001b[1mreferences\u001b[0m\n",
-      "  - kwargs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import inspect\n",
     "\n",
@@ -943,7 +875,7 @@
     "    print(f'\\nParameters for \"{method.__name__}\":')\n",
     "    for param in inspect.signature(method).parameters.values():\n",
     "        if not param.name == 'self':\n",
-    "            if param.name in h5tbx.conventions.get_current_convention().methods[h5tbx.File].get('__init__', {}).keys():\n",
+    "            if param.name in h5tbx.convention.get_current_convention().methods[h5tbx.File].get('__init__', {}).keys():\n",
     "                print(f'  - {h5tbx._repr.make_bold(param.name)}')\n",
     "            else:\n",
     "                print(f'  - {param.name}')\n",
@@ -961,21 +893,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "a0b03b0c-8d48-46d3-8c0e-98d5dc758650",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "using(\"h5py\")"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "h5tbx.use(None)  # fall back to the default convention"
    ]
