--- a/docs/database/firstSteps.ipynb
+++ b/docs/database/firstSteps.ipynb
@@ -28,12 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "id": "c03a9649-c89b-4d0b-b5a3-cff64a6316da",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from h5rdmtoolbox.database.interface import HDF5DatabaseInterface"
+    "from h5rdmtoolbox.database import HDF5DBInterface"
    ]
   },
   {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "id": "4d4c6cd6-6262-4abe-af1d-adec503a9b84",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
     "from typing import Generator\n",
     "from h5rdmtoolbox.database.lazy import LHDFObject\n",
     "\n",
-    "class MyDBInterface(HDF5DatabaseInterface):\n",
+    "class MyDBInterface(HDF5DBInterface):\n",
     "\n",
     "    def __init__(self, *args, **kwargs):\n",
     "        \"\"\"init the db\"\"\"\n",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "id": "f52f38e7-2bb7-402c-bea0-627598671901",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "id": "b131f615-1ebb-43f8-9d4c-bf3c73591060",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "id": "74cc251f-23ca-4f86-b0f9-7f57f7dbd139",
    "metadata": {},
    "outputs": [
@@ -522,10 +522,10 @@
        "0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0\n",
        "Coordinates:\n",
        "  * x        (x) int32 1 2 3 4\n",
-       "  * y        (y) int32 10 20</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'my_dataset'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>x</span>: 4</li><li><span class='xr-has-index'>y</span>: 2</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-bc8ccb8b-d205-49d5-b083-e277bacb2ed4' class='xr-array-in' type='checkbox' ><label for='section-bc8ccb8b-d205-49d5-b083-e277bacb2ed4' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0</span></div><div class='xr-array-data'><pre>array([[0., 0.],\n",
+       "  * y        (y) int32 10 20</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'my_dataset'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>x</span>: 4</li><li><span class='xr-has-index'>y</span>: 2</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-2bdb4185-af11-4e81-bf94-bd3c4c4ae303' class='xr-array-in' type='checkbox' ><label for='section-2bdb4185-af11-4e81-bf94-bd3c4c4ae303' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0</span></div><div class='xr-array-data'><pre>array([[0., 0.],\n",
        "       [0., 0.],\n",
        "       [0., 0.],\n",
-       "       [0., 0.]], dtype=float32)</pre></div></div></li><li class='xr-section-item'><input id='section-79b34af6-e294-4c91-b727-d69af5a12ee7' class='xr-section-summary-in' type='checkbox'  checked><label for='section-79b34af6-e294-4c91-b727-d69af5a12ee7' class='xr-section-summary' >Coordinates: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>x</span></div><div class='xr-var-dims'>(x)</div><div class='xr-var-dtype'>int32</div><div class='xr-var-preview xr-preview'>1 2 3 4</div><input id='attrs-3165edcc-7555-45c0-ab0a-425945e6b5b0' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-3165edcc-7555-45c0-ab0a-425945e6b5b0' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-5543a8a4-f08e-410f-b75e-ef6931fcf043' class='xr-var-data-in' type='checkbox'><label for='data-5543a8a4-f08e-410f-b75e-ef6931fcf043' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([1, 2, 3, 4])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>y</span></div><div class='xr-var-dims'>(y)</div><div class='xr-var-dtype'>int32</div><div class='xr-var-preview xr-preview'>10 20</div><input id='attrs-59c2bef0-f99e-413c-95fd-0f8c552ec1db' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-59c2bef0-f99e-413c-95fd-0f8c552ec1db' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-4eedb151-1203-4ea3-891c-d9e4d8df0419' class='xr-var-data-in' type='checkbox'><label for='data-4eedb151-1203-4ea3-891c-d9e4d8df0419' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([10, 20])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-19afcffc-4ec6-4b5b-ad98-2bc822d1751e' class='xr-section-summary-in' type='checkbox'  ><label for='section-19afcffc-4ec6-4b5b-ad98-2bc822d1751e' class='xr-section-summary' >Indexes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>x</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-bb376eeb-755e-42e2-9277-128169ff1c10' class='xr-index-data-in' type='checkbox'/><label for='index-bb376eeb-755e-42e2-9277-128169ff1c10' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([1, 2, 3, 4], dtype=&#x27;int32&#x27;, name=&#x27;x&#x27;))</pre></div></li><li class='xr-var-item'><div class='xr-index-name'><div>y</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-bbb86023-ce35-4e58-8588-9170dba2d2b4' class='xr-index-data-in' type='checkbox'/><label for='index-bbb86023-ce35-4e58-8588-9170dba2d2b4' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([10, 20], dtype=&#x27;int32&#x27;, name=&#x27;y&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-b9f7612d-d5d4-42f2-a0eb-06580e12c2a6' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-b9f7612d-d5d4-42f2-a0eb-06580e12c2a6' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
+       "       [0., 0.]], dtype=float32)</pre></div></div></li><li class='xr-section-item'><input id='section-6b77300c-a512-44f0-b31e-e7bf76d2b8a7' class='xr-section-summary-in' type='checkbox'  checked><label for='section-6b77300c-a512-44f0-b31e-e7bf76d2b8a7' class='xr-section-summary' >Coordinates: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>x</span></div><div class='xr-var-dims'>(x)</div><div class='xr-var-dtype'>int32</div><div class='xr-var-preview xr-preview'>1 2 3 4</div><input id='attrs-193e1fe7-a3c5-4570-8268-53b444289ff8' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-193e1fe7-a3c5-4570-8268-53b444289ff8' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-846a939c-1383-4031-8c55-7b895d66b138' class='xr-var-data-in' type='checkbox'><label for='data-846a939c-1383-4031-8c55-7b895d66b138' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([1, 2, 3, 4])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>y</span></div><div class='xr-var-dims'>(y)</div><div class='xr-var-dtype'>int32</div><div class='xr-var-preview xr-preview'>10 20</div><input id='attrs-a8ae0c4a-91e8-4ac6-95cc-9216c3574e94' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-a8ae0c4a-91e8-4ac6-95cc-9216c3574e94' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-96c36882-d77d-49bd-8bb9-0616d41677b1' class='xr-var-data-in' type='checkbox'><label for='data-96c36882-d77d-49bd-8bb9-0616d41677b1' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([10, 20])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-e6644b5b-d0e6-4b28-a8f6-8a3d4462d3a2' class='xr-section-summary-in' type='checkbox'  ><label for='section-e6644b5b-d0e6-4b28-a8f6-8a3d4462d3a2' class='xr-section-summary' >Indexes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>x</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-55d65795-53be-4d7b-b629-9f2cd0a41607' class='xr-index-data-in' type='checkbox'/><label for='index-55d65795-53be-4d7b-b629-9f2cd0a41607' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([1, 2, 3, 4], dtype=&#x27;int32&#x27;, name=&#x27;x&#x27;))</pre></div></li><li class='xr-var-item'><div class='xr-index-name'><div>y</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-e5bbf6b7-60af-426f-8bb6-8f81d70dc102' class='xr-index-data-in' type='checkbox'/><label for='index-e5bbf6b7-60af-426f-8bb6-8f81d70dc102' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([10, 20], dtype=&#x27;int32&#x27;, name=&#x27;y&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-e6b63655-6bcd-426d-a205-5cbc2c460d97' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-e6b63655-6bcd-426d-a205-5cbc2c460d97' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'my_dataset' (x: 4, y: 2)>\n",
@@ -535,7 +535,7 @@
        "  * y        (y) int32 10 20"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "id": "3bfc43bf-f896-4a84-b3a2-ed7d7da6144c",
    "metadata": {},
    "outputs": [
@@ -937,7 +937,7 @@
        "0.0\n",
        "Coordinates:\n",
        "    x        int32 4\n",
-       "    y        int32 20</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'my_dataset'</div></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-cfe83ed0-797d-48d9-9fbc-cb31220c6beb' class='xr-array-in' type='checkbox' ><label for='section-cfe83ed0-797d-48d9-9fbc-cb31220c6beb' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0</span></div><div class='xr-array-data'><pre>array(0., dtype=float32)</pre></div></div></li><li class='xr-section-item'><input id='section-102e1191-26a4-4b77-8ef3-8b78173596c9' class='xr-section-summary-in' type='checkbox'  checked><label for='section-102e1191-26a4-4b77-8ef3-8b78173596c9' class='xr-section-summary' >Coordinates: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span>x</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>int32</div><div class='xr-var-preview xr-preview'>4</div><input id='attrs-46a2bafb-85a6-40a8-9a33-c8f45bcb42a7' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-46a2bafb-85a6-40a8-9a33-c8f45bcb42a7' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-f2f323ce-50f5-4280-b7cb-831ced2d9bc5' class='xr-var-data-in' type='checkbox'><label for='data-f2f323ce-50f5-4280-b7cb-831ced2d9bc5' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(4)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>y</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>int32</div><div class='xr-var-preview xr-preview'>20</div><input id='attrs-d9139858-7e1a-42ef-bc06-77f33fa383cd' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-d9139858-7e1a-42ef-bc06-77f33fa383cd' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-b147904a-56f8-400c-894e-434dad5ac1a1' class='xr-var-data-in' type='checkbox'><label for='data-b147904a-56f8-400c-894e-434dad5ac1a1' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(20)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-9b3c93b2-5a58-47bd-b997-368064acf316' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-9b3c93b2-5a58-47bd-b997-368064acf316' class='xr-section-summary'  title='Expand/collapse section'>Indexes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-d44a35fc-e300-4074-b041-e587352f1323' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-d44a35fc-e300-4074-b041-e587352f1323' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
+       "    y        int32 20</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'my_dataset'</div></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-36f5a203-8cd1-42bd-941a-380717c926e0' class='xr-array-in' type='checkbox' ><label for='section-36f5a203-8cd1-42bd-941a-380717c926e0' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0</span></div><div class='xr-array-data'><pre>array(0., dtype=float32)</pre></div></div></li><li class='xr-section-item'><input id='section-a57d0df9-c701-4ca1-a592-9b13362ca035' class='xr-section-summary-in' type='checkbox'  checked><label for='section-a57d0df9-c701-4ca1-a592-9b13362ca035' class='xr-section-summary' >Coordinates: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span>x</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>int32</div><div class='xr-var-preview xr-preview'>4</div><input id='attrs-c2cf6032-c798-4d84-a9fe-d2dadf643302' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-c2cf6032-c798-4d84-a9fe-d2dadf643302' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-0e065fb3-142a-4407-923b-0977d32f7b00' class='xr-var-data-in' type='checkbox'><label for='data-0e065fb3-142a-4407-923b-0977d32f7b00' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(4)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>y</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>int32</div><div class='xr-var-preview xr-preview'>20</div><input id='attrs-60523c8e-66fd-450b-a7bb-0f33477d0240' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-60523c8e-66fd-450b-a7bb-0f33477d0240' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-4a4ea104-a369-4ed1-8044-f3f4a44c68b3' class='xr-var-data-in' type='checkbox'><label for='data-4a4ea104-a369-4ed1-8044-f3f4a44c68b3' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(20)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-646f400b-6548-4da3-b58f-9771a8e10048' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-646f400b-6548-4da3-b58f-9771a8e10048' class='xr-section-summary'  title='Expand/collapse section'>Indexes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-71d60391-765a-4a82-addb-60702ae27f54' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-71d60391-765a-4a82-addb-60702ae27f54' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'my_dataset' ()>\n",
@@ -947,7 +947,7 @@
        "    y        int32 20"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
