--- a/docs/gettingstarted/quickoverview.ipynb
+++ b/docs/gettingstarted/quickoverview.ipynb
@@ -76,7 +76,7 @@
        "\t\tType of data in file. Can be numerical, analytical or experimental.\n",
        "    * \u001b[1mcontact\u001b[0m:\n",
        "\t\tContact or responsible person for the full file. Contact is represented by an ORCID.\n",
-       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.conventions.consts.DefaultValue object at 0x0000015C61562340>):\n",
+       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.convention.consts.DefaultValue object at 0x0000015C61562340>):\n",
        "\t\tThe standard name table of the convention.\n",
        "    * \u001b[3mcomment\u001b[0m (default=None):\n",
        "\t\tComment describes the file content in more detail.\n",
@@ -106,7 +106,7 @@
     }
    ],
    "source": [
-    "cv = h5tbx.conventions.from_zenodo('10156750')\n",
+    "cv = h5tbx.convention.from_zenodo('10156750')\n",
     "cv"
    ]
   },
