--- a/docs/howto/ht001.ipynb
+++ b/docs/howto/ht001.ipynb
@@ -32,17 +32,17 @@
        " 'natural_naming': True,\n",
        " 'hdf_compression': 'gzip',\n",
        " 'hdf_compression_opts': 5,\n",
+       " 'adjusting_plotting_labels': True,\n",
        " 'xarray_unit_repr_in_plots': 'in',\n",
        " 'plotting_name_order': ('plot_name', 'long_name', 'standard_name'),\n",
        " 'require_unit': True,\n",
        " 'ureg_format': 'C~',\n",
-       " 'default_convention': 'h5tbx',\n",
        " 'init_logger_level': 'ERROR',\n",
        " 'dtime_fmt': '%Y%m%d%H%M%S%f',\n",
        " 'expose_user_prop_to_attrs': True,\n",
        " 'scale_attribute_name': 'scale',\n",
        " 'offset_attribute_name': 'offset',\n",
-       " 'add_source_info_to_xr': True,\n",
+       " 'add_provenance': False,\n",
        " 'ignore_standard_attribute_errors': False,\n",
        " 'allow_deleting_standard_attributes': False,\n",
        " 'parallel_find': True}"
@@ -110,7 +110,7 @@
     {
      "data": {
       "text/plain": [
-       "<h5rdmtoolbox._cfg.set_config at 0x1c02609a9d0>"
+       "<h5rdmtoolbox._cfg.set_config at 0x1e68c2139d0>"
       ]
      },
      "execution_count": 3,
@@ -139,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
