--- a/docs/howto/ht004.ipynb
+++ b/docs/howto/ht004.ipynb
@@ -29,10 +29,10 @@
    ],
    "source": [
     "import h5rdmtoolbox as h5tbx\n",
-    "from h5rdmtoolbox.conventions.standard_names.transformation import Transformation\n",
-    "from h5rdmtoolbox.conventions.standard_names import StandardName\n",
+    "from h5rdmtoolbox.convention.standard_names.transformation import Transformation\n",
+    "from h5rdmtoolbox.convention.standard_names import StandardName\n",
     "\n",
-    "snt = h5tbx.conventions.standard_names.StandardNameTable.from_zenodo(doi=8276716)\n",
+    "snt = h5tbx.convention.standard_names.StandardNameTable.from_zenodo(doi_or_recid=8276716)\n",
     "\n",
     "# check if the problem really exists:\n",
     "try:\n",
@@ -170,8 +170,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-maximum_of_static_pressure6668567300\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-maximum_of_static_pressure6668567300\">\n",
+       "        <input id=\"group-maximum_of_static_pressure6876410300\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-maximum_of_static_pressure6876410300\">\n",
        "        maximum_of_static_pressure</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : Pa</li>           <li style=\"list-style-type: none; font-style: italic\">description : Maximum of static_pressure. Static pressure refers to the force per unit area exerted by a fluid. Pressure is a scalar quantity.</li>      </il>\n",
