--- a/docs/howto/ht005.ipynb
+++ b/docs/howto/ht005.ipynb
@@ -51,7 +51,7 @@
    "source": [
     "yaml_filename = tutorial.get_standard_attribute_yaml_filename()\n",
     "\n",
-    "cv = h5tbx.conventions.Convention.from_yaml(yaml_filename)\n",
+    "cv = h5tbx.convention.Convention.from_yaml(yaml_filename)\n",
     "h5tbx.use(cv)"
    ]
   },
