--- a/docs/practical_examples/nexus.ipynb
+++ b/docs/practical_examples/nexus.ipynb
@@ -4116,7 +4116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from h5rdmtoolbox.conventions import StandardAttribute\n",
+    "from h5rdmtoolbox.convention import StandardAttribute\n",
     "\n",
     "from pydantic import BaseModel, ValidationError\n",
     "from pydantic.functional_validators import AfterValidator, Annotated\n",
@@ -4167,7 +4167,7 @@
     }
    ],
    "source": [
-    "from h5rdmtoolbox.conventions import Convention\n",
+    "from h5rdmtoolbox.convention import Convention\n",
     "\n",
     "cv = Convention(name='nexus', contact=h5tbx.__author__)\n",
     "\n",
