--- a/docs/wrapper/DumpFile.ipynb
+++ b/docs/wrapper/DumpFile.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "d0f77ed6-6668-41b2-9ceb-8487e7141cc5",
    "metadata": {
     "tags": []
@@ -211,37 +211,61 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--22820686200\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--22820686200\">\n",
-       "                        /<span>(1)</span></label>\n",
+       "                        <input id=\"group-ds--4664599200\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--4664599200\">\n",
+       "                        /<span>(4)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__db_file_type__ : fan_case</li><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.13.0</li><li style=\"list-style-type: none; font-style: italic\">contact_person<a href=\"http://www.w3.org/ns/prov#Person\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a> : Susi</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__db_file_type__ : piv_case</li><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 1.0.0</li><li style=\"list-style-type: none; font-style: italic\">contact_person<a href=\"http://www.w3.org/ns/prov#Person\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a> : John</li>\n",
        "                    </ul>\n",
+       "\n",
+       "                <ul id=\"ds-1-/u-4666269300\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/u-4666271800\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/u-4666271800\">u</label>\n",
+       "                    <span class=\"h5tb-dims\">(2, 5, 64, x: 86, 2) [float32]</span>\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : u-component</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
+       "                </ul>\n",
+       "                </ul>\n",
+       "\n",
+       "                <ul id=\"ds-1-/v-4666645100\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/v-4666647400\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/v-4666647400\">v</label>\n",
+       "                    <span class=\"h5tb-dims\">(2, 5, 64, x: 86, 2) [float32]</span>\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : v-component</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
+       "                </ul>\n",
+       "                </ul>\n",
+       "\n",
+       "                <ul id=\"ds-1-/x-4666874300\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/x-4666876500\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/x-4666876500\">x</label>\n",
+       "                    <span class=\"h5tb-dims\">(86) [int32]</span>\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : x-coordinate</li><li style=\"list-style-type: none; font-style: italic\">units : m</li>\n",
+       "                </ul>\n",
+       "                </ul>\n",
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds-operation_point-22821671800\" type=\"checkbox\" >\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds-operation_point-22821671800\">\n",
-       "                        operation_point<span>(2)</span></label>\n",
+       "                        <input id=\"group-ds-timeAverages-4667054800\" type=\"checkbox\" >\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds-timeAverages-4667054800\">\n",
+       "                        timeAverages<span>(2)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : Operation point data group</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : time averaged data</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/operation_point/ptot-22822645000\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/operation_point/ptot-22822648000\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/operation_point/ptot-22822648000\">ptot</label>\n",
-       "                    <span class=\"h5tb-dims\">(100) [float64]</span>\n",
-       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : Pressure increase</li><li style=\"list-style-type: none; font-style: italic\">mean : 33.37117617667266</li><li style=\"list-style-type: none; font-style: italic\">std : 0.3078964773815648</li><li style=\"list-style-type: none; font-style: italic\">units : Pa</li>\n",
+       "                <ul id=\"ds-1-/timeAverages/u-4667767700\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/timeAverages/u-4667769900\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/timeAverages/u-4667769900\">u</label>\n",
+       "                    <span class=\"h5tb-dims\">(2, 64, 86, 2) [float32]</span>\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : mean u-component</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/operation_point/vfr-22823268500\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/operation_point/vfr-22823271100\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/operation_point/vfr-22823271100\">vfr</label>\n",
-       "                    <span class=\"h5tb-dims\">(100) [float64]</span>\n",
-       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : volume flow_utils rate</li><li style=\"list-style-type: none; font-style: italic\">mean : 0.11808336493078711</li><li style=\"list-style-type: none; font-style: italic\">std : 0.28887919783840377</li><li style=\"list-style-type: none; font-style: italic\">units : m**3/s</li>\n",
+       "                <ul id=\"ds-1-/timeAverages/v-4668031300\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/timeAverages/v-4668033500\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/timeAverages/v-4668033500\">v</label>\n",
+       "                    <span class=\"h5tb-dims\">(2, 64, 86, 2) [float32]</span>\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : mean v-component</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "</li>\n",
@@ -282,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "ea58d4b0-6820-4665-a4a3-874240410159",
    "metadata": {},
    "outputs": [
@@ -477,37 +501,61 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--22849010700\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--22849010700\">\n",
-       "                        /<span>(1)</span></label>\n",
+       "                        <input id=\"group-ds--4696505300\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--4696505300\">\n",
+       "                        /<span>(4)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__db_file_type__ : fan_case</li><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.13.0</li><li style=\"list-style-type: none; font-style: italic\">contact_person<a href=\"http://www.w3.org/ns/prov#Person\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a> : Susi</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__db_file_type__ : piv_case</li><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 1.0.0</li><li style=\"list-style-type: none; font-style: italic\">contact_person<a href=\"http://www.w3.org/ns/prov#Person\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a> : John</li>\n",
        "                    </ul>\n",
+       "\n",
+       "                <ul id=\"ds-1-/u-4698866200\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/u-4698870800\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/u-4698870800\">u</label>\n",
+       "                    <span class=\"h5tb-dims\">(2, 5, 64, x: 86, 2) [float32]</span>\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : u-component</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
+       "                </ul>\n",
+       "                </ul>\n",
+       "\n",
+       "                <ul id=\"ds-1-/v-4700105200\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/v-4700110100\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/v-4700110100\">v</label>\n",
+       "                    <span class=\"h5tb-dims\">(2, 5, 64, x: 86, 2) [float32]</span>\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : v-component</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
+       "                </ul>\n",
+       "                </ul>\n",
+       "\n",
+       "                <ul id=\"ds-1-/x-4700499700\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/x-4700502300\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/x-4700502300\">x</label>\n",
+       "                    <span class=\"h5tb-dims\">(86) [int32]</span>\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : x-coordinate</li><li style=\"list-style-type: none; font-style: italic\">units : m</li>\n",
+       "                </ul>\n",
+       "                </ul>\n",
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds-operation_point-22850432800\" type=\"checkbox\" >\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds-operation_point-22850432800\">\n",
-       "                        operation_point<span>(2)</span></label>\n",
+       "                        <input id=\"group-ds-timeAverages-4700708900\" type=\"checkbox\" >\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds-timeAverages-4700708900\">\n",
+       "                        timeAverages<span>(2)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : Operation point data group</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : time averaged data</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/operation_point/ptot-22851600500\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/operation_point/ptot-22851603400\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/operation_point/ptot-22851603400\">ptot</label>\n",
-       "                    <span class=\"h5tb-dims\">(100) [float64]</span>\n",
-       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : Pressure increase</li><li style=\"list-style-type: none; font-style: italic\">mean : 33.37117617667266</li><li style=\"list-style-type: none; font-style: italic\">std : 0.3078964773815648</li><li style=\"list-style-type: none; font-style: italic\">units : Pa</li>\n",
+       "                <ul id=\"ds-1-/timeAverages/u-4701805700\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/timeAverages/u-4701808300\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/timeAverages/u-4701808300\">u</label>\n",
+       "                    <span class=\"h5tb-dims\">(2, 64, 86, 2) [float32]</span>\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : mean u-component</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/operation_point/vfr-22852194900\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/operation_point/vfr-22852197400\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/operation_point/vfr-22852197400\">vfr</label>\n",
-       "                    <span class=\"h5tb-dims\">(100) [float64]</span>\n",
-       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : volume flow_utils rate</li><li style=\"list-style-type: none; font-style: italic\">mean : 0.11808336493078711</li><li style=\"list-style-type: none; font-style: italic\">std : 0.28887919783840377</li><li style=\"list-style-type: none; font-style: italic\">units : m**3/s</li>\n",
+       "                <ul id=\"ds-1-/timeAverages/v-4702136100\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/timeAverages/v-4702138400\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/timeAverages/v-4702138400\">v</label>\n",
+       "                    <span class=\"h5tb-dims\">(2, 64, 86, 2) [float32]</span>\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : mean v-component</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "</li>\n",
