--- a/docs/wrapper/GroupCreation.ipynb
+++ b/docs/wrapper/GroupCreation.ipynb
@@ -110,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from h5rdmtoolbox.database import hdfdb"
+    "from h5rdmtoolbox.database import hdfDB"
    ]
   },
   {
@@ -120,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = hdfdb.FileDB(h5.hdf_filename)"
+    "db = hdfDB(h5.hdf_filename)"
    ]
   },
   {
@@ -133,7 +133,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<LGroup \"/mygrp\" in \"C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_3\\tmp1.hdf\">\n"
+      "<LGroup \"/mygrp\" in \"C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_15\\tmp1.hdf\">\n"
      ]
     }
    ],
