--- a/docs/wrapper/NaturalNaming.ipynb
+++ b/docs/wrapper/NaturalNaming.ipynb
@@ -53,7 +53,7 @@
     {
      "data": {
       "text/plain": [
-       "<h5rdmtoolbox._cfg.set_config at 0x1bbbda712b0>"
+       "<h5rdmtoolbox._cfg.set_config at 0x1e30a21aca0>"
       ]
      },
      "execution_count": 2,
@@ -104,7 +104,7 @@
     {
      "data": {
       "text/plain": [
-       "<h5rdmtoolbox._cfg.set_config at 0x1bbbda84550>"
+       "<h5rdmtoolbox._cfg.set_config at 0x1e30a21a910>"
       ]
      },
      "execution_count": 4,
@@ -164,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
