--- a/docs/wrapper/SpecialIO.ipynb
+++ b/docs/wrapper/SpecialIO.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "<h5rdmtoolbox.conventions.core.use at 0x220f2104e20>"
+       "using(\"h5py\")"
       ]
      },
      "execution_count": 1,
@@ -414,55 +414,40 @@
        "    white-space: nowrap;\r\n",
        "}\r\n",
        "\r\n",
-       "\r\n",
-       ".h5tb-unit {\r\n",
-       "    width: 96px;\r\n",
-       "    white-space: nowrap;\r\n",
-       "    padding-right: 2px;\r\n",
-       "    text-align: right;\r\n",
-       "    color: #555;\r\n",
-       "    font-style: italic;\r\n",
-       "}\r\n",
-       "\r\n",
        ".h5tb-attr-list {\r\n",
        "    list-style: none;\r\n",
-       "    background-color: #fff;\r\n",
+       "    background-color: rgba(0,0,0,.0);\r\n",
        "    padding-bottom: 6px;\r\n",
-       "    color: #555;\r\n",
+       "    color: #6a6c73;\r\n",
        "}\r\n",
        "\r\n",
        ".h5tb-attr-list li,\r\n",
        ".h5tb-attr-list li:hover {\r\n",
-       "    background-color: #fff;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dim-highlight {\r\n",
-       "    background-color: rgba(3, 169, 244, .2);\r\n",
-       "    cursor: pointer;\r\n",
+       "    background-color: rgba(0,0,0,.0);\r\n",
        "}</style></head>\n",
        "<div class='h5tb-warp'>\n",
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4761982300\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4761982300\">\n",
+       "                        <input id=\"group-ds--5058387300\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5058387300\">\n",
        "                        /<span>(2)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8.0a0</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 1.0.0</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/x-4764871100\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/x-4764877300\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/x-4764877300\">x</label>\n",
+       "                <ul id=\"ds-1-/x-5059784300\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/x-5059788300\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/x-5059788300\">x</label>\n",
        "                    <span class=\"h5tb-dims\">(4) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/y-4765862600\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/y-4765869000\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/y-4765869000\">y</label>\n",
+       "                <ul id=\"ds-1-/y-5060040500\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/y-5060043200\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/y-5060043200\">y</label>\n",
        "                    <span class=\"h5tb-dims\">(x: 4) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
@@ -683,55 +668,40 @@
        "    white-space: nowrap;\r\n",
        "}\r\n",
        "\r\n",
-       "\r\n",
-       ".h5tb-unit {\r\n",
-       "    width: 96px;\r\n",
-       "    white-space: nowrap;\r\n",
-       "    padding-right: 2px;\r\n",
-       "    text-align: right;\r\n",
-       "    color: #555;\r\n",
-       "    font-style: italic;\r\n",
-       "}\r\n",
-       "\r\n",
        ".h5tb-attr-list {\r\n",
        "    list-style: none;\r\n",
-       "    background-color: #fff;\r\n",
+       "    background-color: rgba(0,0,0,.0);\r\n",
        "    padding-bottom: 6px;\r\n",
-       "    color: #555;\r\n",
+       "    color: #6a6c73;\r\n",
        "}\r\n",
        "\r\n",
        ".h5tb-attr-list li,\r\n",
        ".h5tb-attr-list li:hover {\r\n",
-       "    background-color: #fff;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dim-highlight {\r\n",
-       "    background-color: rgba(3, 169, 244, .2);\r\n",
-       "    cursor: pointer;\r\n",
+       "    background-color: rgba(0,0,0,.0);\r\n",
        "}</style></head>\n",
        "<div class='h5tb-warp'>\n",
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4811366600\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4811366600\">\n",
+       "                        <input id=\"group-ds--5091358700\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5091358700\">\n",
        "                        /<span>(2)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8.0a0</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 1.0.0</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/x-4812666500\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/x-4812670600\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/x-4812670600\">x</label>\n",
+       "                <ul id=\"ds-1-/x-5092874600\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/x-5092877700\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/x-5092877700\">x</label>\n",
        "                    <span class=\"h5tb-dims\">(12) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/y-4813312300\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/y-4813316500\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/y-4813316500\">y</label>\n",
+       "                <ul id=\"ds-1-/y-5093082300\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/y-5093084700\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/y-5093084700\">y</label>\n",
        "                    <span class=\"h5tb-dims\">(x: 12) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
@@ -944,55 +914,40 @@
        "    white-space: nowrap;\r\n",
        "}\r\n",
        "\r\n",
-       "\r\n",
-       ".h5tb-unit {\r\n",
-       "    width: 96px;\r\n",
-       "    white-space: nowrap;\r\n",
-       "    padding-right: 2px;\r\n",
-       "    text-align: right;\r\n",
-       "    color: #555;\r\n",
-       "    font-style: italic;\r\n",
-       "}\r\n",
-       "\r\n",
        ".h5tb-attr-list {\r\n",
        "    list-style: none;\r\n",
-       "    background-color: #fff;\r\n",
+       "    background-color: rgba(0,0,0,.0);\r\n",
        "    padding-bottom: 6px;\r\n",
-       "    color: #555;\r\n",
+       "    color: #6a6c73;\r\n",
        "}\r\n",
        "\r\n",
        ".h5tb-attr-list li,\r\n",
        ".h5tb-attr-list li:hover {\r\n",
-       "    background-color: #fff;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dim-highlight {\r\n",
-       "    background-color: rgba(3, 169, 244, .2);\r\n",
-       "    cursor: pointer;\r\n",
+       "    background-color: rgba(0,0,0,.0);\r\n",
        "}</style></head>\n",
        "<div class='h5tb-warp'>\n",
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4848376000\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4848376000\">\n",
+       "                        <input id=\"group-ds--5122193500\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5122193500\">\n",
        "                        /<span>(2)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8.0a0</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 1.0.0</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/x-4850190500\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/x-4850196400\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/x-4850196400\">x</label>\n",
+       "                <ul id=\"ds-1-/x-5123323300\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/x-5123325800\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/x-5123325800\">x</label>\n",
        "                    <span class=\"h5tb-dims\">(2, 8) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/y-4850473400\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/y-4850478900\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/y-4850478900\">y</label>\n",
+       "                <ul id=\"ds-1-/y-5123460700\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/y-5123463100\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/y-5123463100\">y</label>\n",
        "                    <span class=\"h5tb-dims\">(2, 8) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
@@ -1206,47 +1161,32 @@
        "    white-space: nowrap;\r\n",
        "}\r\n",
        "\r\n",
-       "\r\n",
-       ".h5tb-unit {\r\n",
-       "    width: 96px;\r\n",
-       "    white-space: nowrap;\r\n",
-       "    padding-right: 2px;\r\n",
-       "    text-align: right;\r\n",
-       "    color: #555;\r\n",
-       "    font-style: italic;\r\n",
-       "}\r\n",
-       "\r\n",
        ".h5tb-attr-list {\r\n",
        "    list-style: none;\r\n",
-       "    background-color: #fff;\r\n",
+       "    background-color: rgba(0,0,0,.0);\r\n",
        "    padding-bottom: 6px;\r\n",
-       "    color: #555;\r\n",
+       "    color: #6a6c73;\r\n",
        "}\r\n",
        "\r\n",
        ".h5tb-attr-list li,\r\n",
        ".h5tb-attr-list li:hover {\r\n",
-       "    background-color: #fff;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dim-highlight {\r\n",
-       "    background-color: rgba(3, 169, 244, .2);\r\n",
-       "    cursor: pointer;\r\n",
+       "    background-color: rgba(0,0,0,.0);\r\n",
        "}</style></head>\n",
        "<div class='h5tb-warp'>\n",
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4871464100\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4871464100\">\n",
+       "                        <input id=\"group-ds--5147502000\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5147502000\">\n",
        "                        /<span>(1)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8.0a0</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 1.0.0</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/testimg-4873028000\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/testimg-4873034200\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/testimg-4873034200\">testimg</label>\n",
+       "                <ul id=\"ds-1-/testimg-5148405600\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/testimg-5148409100\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/testimg-5148409100\">testimg</label>\n",
        "                    <span class=\"h5tb-dims\">(5, 20, 10) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
@@ -1491,47 +1431,32 @@
        "    white-space: nowrap;\r\n",
        "}\r\n",
        "\r\n",
-       "\r\n",
-       ".h5tb-unit {\r\n",
-       "    width: 96px;\r\n",
-       "    white-space: nowrap;\r\n",
-       "    padding-right: 2px;\r\n",
-       "    text-align: right;\r\n",
-       "    color: #555;\r\n",
-       "    font-style: italic;\r\n",
-       "}\r\n",
-       "\r\n",
        ".h5tb-attr-list {\r\n",
        "    list-style: none;\r\n",
-       "    background-color: #fff;\r\n",
+       "    background-color: rgba(0,0,0,.0);\r\n",
        "    padding-bottom: 6px;\r\n",
-       "    color: #555;\r\n",
+       "    color: #6a6c73;\r\n",
        "}\r\n",
        "\r\n",
        ".h5tb-attr-list li,\r\n",
        ".h5tb-attr-list li:hover {\r\n",
-       "    background-color: #fff;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dim-highlight {\r\n",
-       "    background-color: rgba(3, 169, 244, .2);\r\n",
-       "    cursor: pointer;\r\n",
+       "    background-color: rgba(0,0,0,.0);\r\n",
        "}</style></head>\n",
        "<div class='h5tb-warp'>\n",
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4921836900\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4921836900\">\n",
+       "                        <input id=\"group-ds--5190888200\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5190888200\">\n",
        "                        /<span>(1)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8.0a0</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 1.0.0</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/testimg-4923179600\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/testimg-4923185900\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/testimg-4923185900\">testimg</label>\n",
+       "                <ul id=\"ds-1-/testimg-5191500300\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/testimg-5191502800\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/testimg-5191502800\">testimg</label>\n",
        "                    <span class=\"h5tb-dims\">(5, 20, 10) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
@@ -1580,7 +1505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
