--- a/docs/database/mongo.ipynb
+++ b/docs/database/mongo.ipynb
@@ -34,7 +34,7 @@
     {
      "data": {
       "text/plain": [
-       "'0.13.0'"
+       "using(\"h5py\")"
       ]
      },
      "execution_count": 1,
@@ -333,49 +333,49 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--8257191100\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--8257191100\">\n",
+       "                        <input id=\"group-ds--8412548000\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--8412548000\">\n",
        "                        /<span>(5)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.13.0</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 1.0.0</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/correlation-8258868900\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/correlation-8258871300\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/correlation-8258871300\">correlation</label>\n",
+       "                <ul id=\"ds-1-/correlation-8414269000\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/correlation-8414271400\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/correlation-8414271400\">correlation</label>\n",
        "                    <span class=\"h5tb-dims\">(1797) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/digit-8258973200\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/digit-8258975300\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/digit-8258975300\">digit</label>\n",
+       "                <ul id=\"ds-1-/digit-8414380400\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/digit-8414382600\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/digit-8414382600\">digit</label>\n",
        "                    <span class=\"h5tb-dims\">(1797) [int32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/dissimilarity-8259048400\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/dissimilarity-8259050400\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/dissimilarity-8259050400\">dissimilarity</label>\n",
+       "                <ul id=\"ds-1-/dissimilarity-8414458000\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/dissimilarity-8414460100\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/dissimilarity-8414460100\">dissimilarity</label>\n",
        "                    <span class=\"h5tb-dims\">(1797) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/images-8259233300\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/images-8259235500\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/images-8259235500\">images</label>\n",
+       "                <ul id=\"ds-1-/images-8414623100\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/images-8414625000\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/images-8414625000\">images</label>\n",
        "                    <span class=\"h5tb-dims\">(digit: 1797, 8, 8) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/mean-8259342900\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/mean-8259345200\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/mean-8259345200\">mean</label>\n",
+       "                <ul id=\"ds-1-/mean-8414694700\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/mean-8414696800\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/mean-8414696800\">mean</label>\n",
        "                    <span class=\"h5tb-dims\">(1797) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
@@ -686,7 +686,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x18551b4c7c0>"
+       "<matplotlib.collections.QuadMesh at 0x1d214859610>"
       ]
      },
      "execution_count": 16,
